Fixed spacing on leadership images, fixed spacing on shadowbox

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -738,8 +738,12 @@ section[role="leader"] ul li {
   display: block;
   float: left;
   width: 199px;
-  margin: 30px 14px 0 14px;
+  margin: 30px 38px 0 0;
   line-height: 22px;
+}
+
+section[role="leader"] ul li.last {
+  margin: 30px 0 0 0;
 }
 
 section[role="leader"] ul li a:hover {
@@ -755,6 +759,10 @@ section[role="leader"] .tagline {
   font-size: 14px;
   color: #667280;
   line-height: 3px;
+}
+
+.leader-popout-content p {
+  margin-top: 0px;
 }
 
 /* Fancybox Styling */
@@ -848,20 +856,20 @@ section[role="leader"] .tagline {
 
 .leader-popout-right {
   max-width: 380px;
-  float: right;
+  float: left;
   padding: 20px;
 }
 
 .leader-popout-content {
   overflow: scroll;
   height: 375px;
-  margin-top: 15px;
+  margin-top: 20px;
 }
 
 .leader-popout-right h4 {
   font-family: robotolight;
   font-size: 28px;
-  margin: 0.5em 0;
+  margin: 0.1em 0 0.5em 0;
 }
 
 .leader-popout-right .tagline {
